--- a/project/bookkeeping/templates/bookkeeping/summary_savings.html
+++ b/project/bookkeeping/templates/bookkeeping/summary_savings.html
@@ -24,8 +24,7 @@
 
 <div class="row my-2">
     <div class="col">
-        {% include 'bookkeeping/includes/chart_summary_savings.html' with items=all title=_('Funds')|add:',
-        '|add:_('Shares')|add:', '|add:_('Pensions')|add:' III' %}
+        {% include 'bookkeeping/includes/chart_summary_savings.html' with items=all title=_('Funds')|add:', '|add:_('Shares')|add:', '|add:_('Pensions')|add:' III' %}
     </div>
 </div>
 
