--- a/project/bookkeeping/templates/bookkeeping/summary_savings.html
+++ b/project/bookkeeping/templates/bookkeeping/summary_savings.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 {% if records > 1 %}
-<div class="row my-2">
+<div class="row mt-2">
     <div class="col-md-12 col-lg-6">
         {% include 'bookkeeping/includes/chart_summary_savings.html' with items=funds title=_('Funds') %}
     </div>
@@ -16,7 +16,7 @@
     </div>
 </div>
 
-<div class="row my-2">
+<div class="row mt-5">
     <div class="col-md-12 col-lg-6">
         {% include 'bookkeeping/includes/chart_summary_savings.html' with items=pensions title=_('Pensions')|add:' III' %}
     </div>
@@ -25,7 +25,7 @@
     </div>
 </div>
 
-<div class="row my-2">
+<div class="row mt-5">
     <div class="col">
         {% include 'bookkeeping/includes/chart_summary_savings.html' with items=all title=_('Funds')|add:', '|add:_('Shares')|add:', '|add:_('Pensions')|add:' III' %}
     </div>
