--- a/project/bookkeeping/templates/bookkeeping/includes/chart_summary_savings.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/chart_summary_savings.html
@@ -22,6 +22,7 @@
             style: {
                 fontSize: '16px',
                 fontFamily: 'Calibri, Verdana',
+                fontWeight: 'bold',
             },
         },
         xAxis: {
