--- a/project/bookkeeping/templates/bookkeeping/includes/chart_summary_savings.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/chart_summary_savings.html
@@ -111,8 +111,8 @@
             borderWidth: '0.5',
             dataLabels: {
                 enabled: true,
-                verticalAlign: 'top',
-                y: -4,
+                // verticalAlign: 'top',
+                // y: -4,
                 formatter: function () {
                     return `${Highcharts.numberFormat(this.y, 0)}`
                 },
@@ -130,8 +130,8 @@
             borderWidth: '0.5',
             dataLabels: {
                 enabled: true,
-                verticalAlign: 'top',
-                y: -4,
+                // verticalAlign: 'top',
+                // y: -4,
                 formatter: function () {
                     return `${Highcharts.numberFormat(this.y, 0)}`
                 },
