--- a/project/bookkeeping/templates/bookkeeping/summary_savings.html
+++ b/project/bookkeeping/templates/bookkeeping/summary_savings.html
@@ -26,7 +26,10 @@
 </div>
 
 <div class="row mt-5">
-    <div class="col">
+    <div class="col-md-12 col-lg-6">
+        {% include 'bookkeeping/includes/chart_summary_savings.html' with items=funds_shares title=_('Funds')|add:', '|add:_('Shares') %}
+    </div>
+    <div class="col-md-12 col-lg-6">
         {% include 'bookkeeping/includes/chart_summary_savings.html' with items=all title=_('Funds')|add:', '|add:_('Shares')|add:', '|add:_('Pensions')|add:' III' %}
     </div>
 </div>
