--- a/project/bookkeeping/templates/bookkeeping/summary_savings.html
+++ b/project/bookkeeping/templates/bookkeeping/summary_savings.html
@@ -18,7 +18,7 @@
 
 <div class="row mt-5">
     <div class="col-md-12 col-lg-6">
-        {% include 'bookkeeping/includes/chart_summary_savings.html' with items=pensions title=_('Pensions')|add:' III' %}
+        {% include 'bookkeeping/includes/chart_summary_savings.html' with items=pensions3 title=_('Pensions')|add:' III' %}
     </div>
     <div class="col-md-12 col-lg-6">
         {% include 'bookkeeping/includes/chart_summary_savings.html' with items=pensions2 title=_('Pensions')|add:' II' %}
