--- a/project/bookkeeping/templates/bookkeeping/includes/chart_summary_savings.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/chart_summary_savings.html
@@ -15,6 +15,7 @@
     Highcharts.chart('container-{{ title|slugify }}-summary', {
         chart: {
             type: 'column',
+            spacingRight: 25,
         },
         title: {
             text: '{{ title }}',
