fixed error, active tab /savings/ and /summary/savings/

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -87,7 +87,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link {% if '/savings/' in request.path %}active{% endif %}" href="{% url 'savings:savings_index' %}">{% translate 'Savings' %}</a>
+            <a class="nav-link {% if request.resolver_match.url_name == 'savings_index' %}active{% endif %}" href="{% url 'savings:savings_index' %}">{% translate 'Savings' %}</a>
           </li>
 
           <li class="nav-item">
@@ -150,7 +150,7 @@
 
           <li class="nav-item">
             <div class="btn-group">
-              <a class="btn btn-menu nav-link {% if '/summary/' in request.path %}active{% endif %}" href="{% url 'bookkeeping:summary' %}">{% translate 'Summary' %}</a>
+              <a class="btn btn-menu nav-link {% if 'summary' in request.path %}active{% endif %}" href="{% url 'bookkeeping:summary' %}">{% translate 'Summary' %}</a>
               <button type="button" class="btn btn-menu dropdown-toggle dropdown-toggle-split nav-link {% if '/summary/' in request.path %}active{% endif %}" data-bs-toggle="dropdown" aria-expanded="false">
                 <span class="visually-hidden">Toggle Dropdown</span>
               </button>
