--- a/project/bookkeeping/templates/bookkeeping/summary_savings.html
+++ b/project/bookkeeping/templates/bookkeeping/summary_savings.html
@@ -2,6 +2,8 @@
 
 {% block head %}
 <script src="https://code.highcharts.com/highcharts.src.js"></script>
+<script src="https://code.highcharts.com/modules/annotations.js"></script>
+
 {% endblock head %}
 
 {% block content %}
