--- a/project/bookkeeping/templates/bookkeeping/includes/chart_summary_savings.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/chart_summary_savings.html
@@ -25,6 +25,24 @@
                 fontWeight: 'bold',
             },
         },
+        annotations: [{
+            draggable: '',
+            labelOptions: {
+                // verticalAlign: 'top',
+            },
+            labels: [
+                {% for i in items.total %}
+                {
+                    point: {
+                        xAxis: 0,
+                        yAxis: 0,
+                        x: {{ forloop.counter0 }},
+                        y: '{{ i|stringformat:"f" }}'
+                    },
+                    text: '{{ i|floatformat:0}}'
+                },{% endfor %}
+            ]
+        }],
         xAxis: {
             categories: categoryLabels,
             lineColor: '#000',
@@ -52,24 +70,24 @@
                 },
             },
             stackLabels: {
-                enabled: true,
-                style: {
-                    fontWeight: 'bold',
-                    textOutline: false,
-                },
-                formatter: function () {
-                    var sum = 0;
-                    var serries = this.axis.series;
-                    for (i in [1,2]) {
-                        sum += serries[i].yData[this.x];
-                    }
-                    if (this.isNegative) {
-                        return '';
-                    } else {
-                        return `${Highcharts.numberFormat(sum, 0)}`
-                    }
-                },
-                verticalAlign: 'top'
+                enabled: false,
+                // style: {
+                //     fontWeight: 'bold',
+                //     textOutline: false,
+                // },
+                // formatter: function () {
+                //     var sum = 0;
+                //     var serries = this.axis.series;
+                //     for (i in [1,2]) {
+                //         sum += serries[i].yData[this.x];
+                //     }
+                //     if (this.isNegative) {
+                //         return '';
+                //     } else {
+                //         return `${Highcharts.numberFormat(sum, 0)}`
+                //     }
+                // },
+                // verticalAlign: 'top'
             }
         },
         legend: {
@@ -108,10 +126,12 @@
             borderWidth: '0.5',
             dataLabels: {
                 enabled: true,
-                // verticalAlign: 'top',
-                // y: -4,
                 formatter: function () {
-                    return `${Highcharts.numberFormat(this.y, 0)}`
+                    if (this.y == 0) {
+                        return '';
+                    } else {
+                        return `${Highcharts.numberFormat(this.y, 0)}`;
+                    }
                 },
                 style: {
                     fontWeight: 'bold',
@@ -127,8 +147,7 @@
             borderWidth: '0.5',
             dataLabels: {
                 enabled: true,
-                // verticalAlign: 'top',
-                // y: -4,
+                verticalAlign: 'top',
                 formatter: function () {
                     return `${Highcharts.numberFormat(this.y, 0)}`
                 },
@@ -141,6 +160,7 @@
         }]
     }, function (chartObj) {
             var series = chartObj.series[0];
+
             $.each(series.data, function (i, point) {
                  if (point.negative) {
                     var c = '#c0504d';
