--- a/project/bookkeeping/templates/bookkeeping/includes/chart_summary_savings.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/chart_summary_savings.html
@@ -55,6 +55,7 @@
             },
         },
         yAxis: {
+            max: {{ items.max|safe }},
             title: {
                 text: ''
             },
