round quantity value

--- a/project/counts/templates/counts/includes/chart_calendar.html
+++ b/project/counts/templates/counts/includes/chart_calendar.html
@@ -115,7 +115,7 @@ Highcharts.chart('clander_{{ id }}_container', {
         if(this.point.value >= 0.1)
         {
         	s += '<div class="gap">{% translate "Gap" %} '+this.point.gap+'d.</div>';
-        	s += '<div class="qty">{% translate "Quantity" %} '+this.point.qty+'</div>';
+        	s += '<div class="qty">{% translate "Quantity" %} '+ Highcharts.numberFormat(this.point.qty, 1) +'</div>';
         }
         return s;
       }
