--- a/project/core/templates/core/includes/generic_form.html
+++ b/project/core/templates/core/includes/generic_form.html
@@ -1,4 +1,7 @@
-{% load crispy_forms_tags %}{% load static %}{% load i18n %}
+{% load crispy_forms_tags %}
+{% load static %}
+{% load i18n %}
+
 <form method="POST" enctype="multipart/form-data" novalidate id="js-form" class="js-form" action="{{ url }}" data-action="{{ form_action }}" autocomplete="off" tabindex="-1" data-update-container="{{ update_container }}" {% if chained_dropdown %}data-chained-dropdown="{{ chained_dropdown }}"{% endif %}>
     {% csrf_token %}
     <script src="{% static 'js/moment-with-locales-2.9.0.min.js' %}"></script>
