use of cell_edit and cell_delete component

--- a/project/core/templates/core/includes/cell_edit.html
+++ b/project/core/templates/core/includes/cell_edit.html
@@ -1,5 +1,7 @@
 {% load i18n %}
 
 <td class="w-edit">
-    <a role="button" data-url={{ url }} class="js-create edit" title="{% translate 'Edit' %}"><i class="bi bi-pencil-fill"></i></a>
+    {% if url %}
+    <a role="button" data-url="{{ url }}" {% if target %}data-target="{{ target }}"{% endif %} class="js-create {% if target %}set-target{% endif %}edit" title="{% translate 'Edit' %}"><i class="bi bi-pencil-fill"></i></a>
+    {% endif %}
 </td>
