--- a/project/plans/templates/plans/includes/plans_stats.html
+++ b/project/plans/templates/plans/includes/plans_stats.html
@@ -1,2 +1,2 @@
 {% load generic_list %}
-{% generic_list items '' request.user.year 'type' %}
+{% generic_list year=request.user.year items=items type='type' %}
