--- a/project/books/templates/books/includes/books_list.html
+++ b/project/books/templates/books/includes/books_list.html
@@ -1,4 +1,6 @@
-{% load static %}{% load i18n %}
+{% load static %}
+{% load i18n %}
+{% load slippers %}
 
 {% if items %}
 
@@ -27,12 +29,8 @@
             <td class="text-start">{{ item.remark }}</td>
             <td class="text-center">{{ item.started|date:"Y-m-d" }}</td>
             <td class="text-center">{{ item.ended|date:"Y-m-d"|default_if_none:'-' }}</td>
-            <td class="w-edit">
-                <a role="button" data-url="{{ url_update }}?tab={{ tab }}" class=" js-create edit" title="{% translate 'Edit' %}"><i class="bi bi-pencil-fill"></i></a>
-            </td>
-            <td class="w-delete">
-                <a role="button" data-url="{{ url_delete }}?tab={{ tab }}" class="js-delete trash" title="{% translate 'Delete' %}"><i class="bi bi-trash-fill"></i></a>
-            </td>
+            {% edit_cell url=url_update|add:'?tab='|add:tab %}
+            {% delete_cell url=url_delete|add:'?tab='|add:tab %}
         </tr>
         {% endfor %}
     </tbody>
