--- a/project/core/templates/core/includes/cell_delete.html
+++ b/project/core/templates/core/includes/cell_delete.html
@@ -1,5 +1,7 @@
 {% load i18n %}
 
 <td class="w-delete">
-    <a role="button" data-url={{ url }} class="js-delete trash" title="{% translate 'Delete' %}"><i class="bi bi-trash-fill"></i></a>
+    {% if url %}
+    <a role="button" data-url="{{ url }}" {% if target %}data-target="{{ target }}"{% endif %} class="js-delete {% if target %}set-target{% endif %}trash" title="{% translate 'Delete' %}"><i class="bi bi-trash-fill"></i></a>
+    {% endif %}
 </td>
