--- a/project/counts/templates/counts/includes/counts_list.html
+++ b/project/counts/templates/counts/includes/counts_list.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-
+{% load slippers %}
 {% if items %}
 
 <table class="table table-striped table-hover stats">
@@ -12,22 +12,25 @@
     </thead>
     <tbody>
         {% for item in items %}
-        {% with request.resolver_match.kwargs.count_type as count_type %}
+
+        {% var count_type=request.resolver_match.kwargs.count_type %}
+
         {% url 'counts:counts_update' count_type item.id as url_update %}
         {% url 'counts:counts_delete' count_type item.id as url_delete %}
-        {% ifchanged item.date|date:"F" %}{% if not forloop.first %}<tr><td colspan="4" class="table-active"></td></tr>{% endif %}
+
+        {% ifchanged item.date|date:"F" %}
+        {% if not forloop.first %}
+        <tr><td colspan="4" class="table-active"></td></tr>
+        {% endif %}
         {% endifchanged %}
+
         <tr data-url="{{ url_update }}" class="dblclick">
             <td class="text-start">{{ item.date|date:"Y-m-d" }}</td>
             <td class="text-start">{{ item.quantity }}</td>
-            <td class="w-edit">
-                <a role="button" data-url="{{ url_update }}" class=" js-create edit" title="{% translate 'Edit' %}"><i class="bi bi-pencil-fill"></i></a>
-            </td>
-            <td class="w-delete">
-                <a role="button" data-url="{{ url_delete }}" class="js-delete trash" title="{% translate 'Delete' %}"><i class="bi bi-trash-fill"></i></a>
-            </td>
+            {% edit_cell url=url_update %}
+            {% delete_cell url=url_delete %}
         </tr>
-        {% endwith %}
+
         {% endfor %}
     </tbody>
 </table>
