--- a/project/debts/templates/debts/includes/lents_return_list.html
+++ b/project/debts/templates/debts/includes/lents_return_list.html
@@ -1,5 +1,6 @@
 {% load humanize %}
 {% load i18n %}
+{% load slippers %}
 
 {% if items %}
 
@@ -26,18 +27,12 @@
             <td class="text-start">{{ item.account }}</td>
             <td class="text-start">{{ item.remark }}</td>
             <td class="text-center">{% if item.lent.closed %}<i class="bi bi-check-circle-fill"></i>{% endif %}</td>
-            <td class="w-edit">
-                {% if not item.lent.closed %}
-                <a role="button" data-url="{{ url_update }}" data-target="lent" class=" js-create set-target edit" title="{% translate 'Edit' %}">
-                    <i class="bi bi-pencil-fill"></i>
-                </a>{% endif %}
-            </td>
-            <td class="w-delete">
-                {% if not item.lent.closed %}
-                <a role="button" data-url="{{ url_delete }}" data-target="lent" class="js-delete set-target trash" title="{% translate 'Delete' %}">
-                    <i class="bi bi-trash-fill"></i>
-                </a>{% endif %}
-            </td>
+            {% if not item.lent.closed %}
+            {% edit_cell url=url_update target="lent" %}
+            {% delete_cell url=url_delete target="lent" %}
+            {% else %}
+            <td colspan="2"></td>
+            {% endif %}
         </tr>
         {% endfor %}
     </tbody>
