--- a/project/incomes/templates/incomes/includes/incomes_list.html
+++ b/project/incomes/templates/incomes/includes/incomes_list.html
@@ -1,5 +1,6 @@
 {% load humanize %}
 {% load i18n %}
+{% load slippers %}
 
 {% if items %}
 
@@ -26,12 +27,8 @@
             <td class="text-start">{{ item.account }}</td>
             <td class="text-start">{{ item.remark }}</td>
             <td>{{ item.price|intcomma }}</td>
-            <td class="w-edit">
-                <a role="button" data-url="{{ url_update }}" class=" js-create edit" title="{% translate 'Edit' %}"><i class="bi bi-pencil-fill"></i></a>
-            </td>
-            <td class="w-delete">
-                <a role="button" data-url="{{ url_delete }}" class="js-delete trash" title="{% translate 'Delete' %}"><i class="bi bi-trash-fill"></i></a>
-            </td>
+            {% edit_cell url=url_update %}
+            {% delete_cell url=url_delete %}
         </tr>
         {% endfor %}
     </tbody>
