--- a/project/plans/templates/plans/includes/expenses_plan_list.html
+++ b/project/plans/templates/plans/includes/expenses_plan_list.html
@@ -1,4 +1,4 @@
 {% load generic_list %}
 
 {% load generic_list %}
-{% generic_list items 'plans:expenses_plan_update' request.user.year 'expense_type' url_delete='plans:expenses_plan_delete' %}
+{% generic_list year=request.user.year items=items type='expense_type' update='plans:expenses_plan_update' delete='plans:expenses_plan_delete' %}
