--- a/project/plans/templates/plans/includes/incomes_plan_list.html
+++ b/project/plans/templates/plans/includes/incomes_plan_list.html
@@ -1,2 +1,2 @@
 {% load generic_list %}
-{% generic_list items 'plans:incomes_plan_update' request.user.year 'income_type' url_delete='plans:incomes_plan_delete' %}
+{% generic_list year=request.user.year items=items type='income_type' update='plans:incomes_plan_update' delete='plans:incomes_plan_delete' %}
