--- a/project/plans/templates/plans/includes/savings_plan_list.html
+++ b/project/plans/templates/plans/includes/savings_plan_list.html
@@ -1,2 +1,2 @@
 {% load generic_list %}
-{% generic_list items 'plans:savings_plan_update' request.user.year 'saving_type' url_delete='plans:savings_plan_delete' %}
+{% generic_list year=request.user.year items=items type='saving_type' update='plans:savings_plan_update'   delete='plans:savings_plan_delete' %}
