--- a/project/bookkeeping/templates/bookkeeping/includes/chart_summary_savings.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/chart_summary_savings.html
@@ -62,7 +62,7 @@
             labels: {
                 enabled: true,
                 formatter: function () {
-                    if (this.value >= 100) return Highcharts.numberFormat(this.value / 1000, 1) + "k";
+                    if (this.value >= 100 || this.value <= 100) return Highcharts.numberFormat(this.value / 1000, 1) + "k";
                     return Highcharts.numberFormat(this.value, 0);
                 },
                 style: {
