--- a/project/drinks/templates/drinks/index.html
+++ b/project/drinks/templates/drinks/index.html
@@ -45,13 +45,7 @@
 {% if tab == 'history' %}{% include 'drinks/includes/tab_history.html' %}{% endif %}
 
 
-{% if tab == 'data' %}
-
-<div class="row">
-    <div class="col" id="ajax-content">{% include 'drinks/includes/drinks_list.html' %}</div>
-</div>
-
-{% endif %}{# endif of tab data #}
+{% if tab == 'data' %}{% include 'drinks/includes/tab_data.html' %}{% endif %}
 
 
 <script>
