--- a/project/drinks/templates/drinks/index.html
+++ b/project/drinks/templates/drinks/index.html
@@ -47,7 +47,60 @@
 
 {% if tab == 'data' %}{% include 'drinks/includes/tab_data.html' %}{% endif %}
 
+<div class="row mt-4">
+    <div class="col-lg-6">
+        <div class="row my-2">
+            <div class="col-sm-3 pt-1"><b>{% translate 'Historical data' %}</b></div>
+            <div class="col-sm-9 text-end">
+                <button type="button" class="btn btn-sm btn-info btn_click" data-url="{% url 'drinks:historical_data' 2 %}">{% translate '2 years' %}</button>
+                <button type="button" class="btn btn-sm btn-info btn_click" data-url="{% url 'drinks:historical_data' 3 %}">{% translate '3 years' %}</button>
+                <button type="button" class="btn btn-sm btn-info btn_click" data-url="{% url 'drinks:historical_data' 7 %}">{% translate '7 years' %}</button>
+                <button type="button" class="btn btn-sm btn-info btn_click" data-url="{% url 'drinks:historical_data' all_years %}">{% translate 'All years' %}</button>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col" id="historical_data"></div>
+        </div>
+    </div>
+
+    <div class="col-lg-6">
+        <div class="row my-2">
+            <div class="col-sm-4 pt-1"><b>{% translate 'Year comparison' %}</b></div>
+            <div class="col-sm-8 text-end" id="compare_form_data">{{ compare_form }}</div>
+        </div>
+
+        <div class="row">
+            <div class="col" id="compare_data"></div>
+        </div>
+    </div>
+</div>
+
 <script>
+    $(function () {
+        var load_historical_data = function () {
+            var btn = $(this);
+            var url = btn.data('url');
+
+            if (url == undefined) {
+                return;
+            }
+
+            $.ajax({
+                url: url,
+                type: 'get',
+                dataType: 'json',
+                success: function (data) {
+                    $('#historical_data').append(data['html']);
+                },
+                error: function (xhr, status, error) {
+                    alert(`err: ${error}\n\nstatus: ${status}`)
+                }
+            });
+        };
+        $(document).on('click', '.btn_click', load_historical_data);
+    });
+
     $(function () {
         var load_compare = function () {
             var btn = $(this);
