html code moved from index to tab_index template

--- a/project/drinks/templates/drinks/includes/tab_index.html
+++ b/project/drinks/templates/drinks/includes/tab_index.html
@@ -34,6 +34,34 @@
     <div class="col-lg-6 col-md-12" id="chart_calendar_2H">{{ chart_calendar_2H }}</div>
 </div>
 
+<div class="row mt-4">
+    <div class="col-lg-6">
+        <div class="row my-2">
+            <div class="col-sm-3 pt-1"><b>{% translate 'Historical data' %}</b></div>
+            <div class="col-sm-9 text-end">
+                <button type="button" class="btn btn-sm btn-info btn_click" data-url="{% url 'drinks:historical_data' 2 %}">{% translate '2 years' %}</button>
+                <button type="button" class="btn btn-sm btn-info btn_click" data-url="{% url 'drinks:historical_data' 3 %}">{% translate '3 years' %}</button>
+                <button type="button" class="btn btn-sm btn-info btn_click" data-url="{% url 'drinks:historical_data' 7 %}">{% translate '7 years' %}</button>
+                <button type="button" class="btn btn-sm btn-info btn_click" data-url="{% url 'drinks:historical_data' all_years %}">{% translate 'All years' %}</button>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col" id="historical_data"></div>
+        </div>
+    </div>
+
+    <div class="col-lg-6">
+        <div class="row my-2">
+            <div class="col-sm-4 pt-1"><b>{% translate 'Year comparison' %}</b></div>
+            <div class="col-sm-8 text-end" id="compare_form_data">{{ compare_form }}</div>
+        </div>
+
+        <div class="row">
+            <div class="col" id="compare_data"></div>
+        </div>
+    </div>
+</div>
 
 <script>
     $(document).on('hidden.bs.modal', '#modal-form', function () {
@@ -63,5 +91,68 @@
                 }
             }
         });
+    });
+
+    $(function () {
+        var load_historical_data = function () {
+            var btn = $(this);
+            var url = btn.data('url');
+
+            if (url == undefined) {
+                return;
+            }
+
+            $.ajax({
+                url: url,
+                type: 'get',
+                dataType: 'json',
+                success: function (data) {
+                    $('#historical_data').append(data['html']);
+                },
+                error: function (xhr, status, error) {
+                    alert(`err: ${error}\n\nstatus: ${status}`)
+                }
+            });
+        };
+        $(document).on('click', '.btn_click', load_historical_data);
+    });
+
+    $(function () {
+        var load_compare = function () {
+            var btn = $(this);
+            var url = btn.data('url');
+
+            if (url == undefined) {
+                return;
+            }
+
+            // This prevents the form from submitting
+            event.preventDefault();
+
+            // Capture form input
+            csrfmiddlewaretoken = $("#compare_form").find("input[name='csrfmiddlewaretoken']" ).val();
+            form_data = $('#compare_form').serializeArray();
+            form_data = JSON.stringify(form_data);
+
+            $.ajax({
+                url: url,
+                type: 'POST',
+                dataType: 'json',
+                type:"POST",
+                data : {
+                    "csrfmiddlewaretoken" : csrfmiddlewaretoken,
+                    "form_data" : form_data
+                },
+                success: function (data) {
+                    $('#compare_data').html(data.html);
+                    $('#compare_form_data').html(data.html_form);
+                },
+                error: function (xhr, status, error) {
+                    alert(`${error}\n\n${xhr.responseJSON.error}`)
+                }
+            });
+        };
+
+        $(document).on('click', '.filter_click', load_compare);
     });
 </script>
