--- a/project/counts/templates/counts/index.html
+++ b/project/counts/templates/counts/index.html
@@ -43,22 +43,7 @@
     </div>
 </div>
 
-{% if tab == 'index' %}
-
-{% if not records %}<div id="no-records"><div class="row my-2"><div class="col">{% include 'core/no_records.html' %}</div></div></div>{% endif %}
-
-<div class="row my-2">
-    <div class="col-lg-4" id="chart_weekdays">{% if records %}{{ chart_weekdays }}{% endif %}</div>
-    <div class="col-lg-4" id="chart_months">{% if records %}{{ chart_months }}{% endif %}</div>
-    <div class="col-lg-4" id="chart_histogram">{% if records %}{{ chart_histogram }}{% endif %}</div>
-</div>
-
-<div class="row my-2">
-    <div class="col-lg-6 col-md-12" id="chart_calendar_1H">{% if records %}{{ chart_calendar_1H }}{% endif %}</div>
-    <div class="col-lg-6 col-md-12" id="chart_calendar_2H">{% if records %}{{ chart_calendar_2H }}{% endif %}</div>
-</div>
-
-{% endif %}
+{% if tab == 'index' %}{% include 'counts/includes/tab_index.html' %}{% endif %}
 
 
 {% if tab == 'data' %}
@@ -70,7 +55,5 @@
 
 
 {% if tab == 'history' %}{% include 'counts/includes/tab_history.html' %}{% endif %}
-
-{% include 'counts/counts_ajax.html' %}
 
 {% endblock content %}
