--- a/project/plans/templates/plans/includes/copy_plans_form.html
+++ b/project/plans/templates/plans/includes/copy_plans_form.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 {% load i18n %}
 
-<form method="post" novalidate id="js-form" class="js-form" action="{{ url }}" data-action="{{ action }}" autocomplete="off" tabindex="-1">
+<form method="post" novalidate id="js-form" class="js-form" action="{{ url }}" data-action="{{ action }}" data-chained-dropdown="plans_copy" autocomplete="off" tabindex="-1">
     {% csrf_token %}
     <script src="{% static 'js/moment-with-locales-2.9.0.min.js' %}"></script>
     <script src="{% static 'bootstrap_datepicker/js/bootstrap-datetimepicker-4.17.47.min.js' %}"></script>
