--- a/project/bookkeeping/templates/bookkeeping/summary_expenses.html
+++ b/project/bookkeeping/templates/bookkeeping/summary_expenses.html
@@ -27,7 +27,7 @@
         <div class="row">
             <div class="col" id="chart"></div>
         </div>
-        <div class="row">
+        <div class="row mt-5">
             <div class="col" id="table"></div>
         </div>
     </div>
