form style changes

--- a/project/bookkeeping/templates/bookkeeping/summary_expenses.html
+++ b/project/bookkeeping/templates/bookkeeping/summary_expenses.html
@@ -13,6 +13,13 @@
     #id_types {
         height: 90vh;
     }
+    #div_id_types {
+        margin-bottom: .25rem!important;
+    }
+    #search_btn {
+        padding-top: 0.15rem!important;
+        padding-bottom: 0.15rem!important;
+    }
 </style>
 {% endblock head %}
 
