--- a/project/bookkeeping/templates/bookkeeping/includes/summary_expenses_form.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/summary_expenses_form.html
@@ -3,11 +3,11 @@
 <form novalidate method="post" id="search_form">
     {% csrf_token %}
     {% include 'core/includes/form_errors.html' %}
-    <div class="col align-self-start">
+    <div>
         {{ form.types|as_crispy_field }}
         {{ form.names|as_crispy_field }}
     </div>
-    <div class="col-auto align-self-start">
-        <input type="submit" name="search" value="{% translate 'Filter' %}" id="search_btn" class="btn btn-secondary btn-sm search_click text-center w5" data-url="{{ url }}" data-update-container="chart" data-update-container2="table">
+    <div>
+        <input type="submit" name="search" value="{% translate 'Filter' %}" id="search_btn" class="btn btn-secondary btn-sm search_click text-center w-100" data-url="{{ url }}" data-update-container="chart" data-update-container2="table">
     </div>
 </form>
