--- a/project/bookkeeping/templates/bookkeeping/includes/summary_expenses_chart.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/summary_expenses_chart.html
@@ -1,6 +1,8 @@
 <div id="container"></div>
 
 <script>
+Highcharts.setOptions({ lang: { decimalPoint: ',', thousandsSep: '.' } });
+
 Highcharts.chart('container', {
     chart: {
         type: 'column'
@@ -11,18 +13,35 @@ Highcharts.chart('container', {
 
     xAxis: {
         categories: {{ categories|safe }},
-        crosshair: true
+        crosshair: true,
+        lineColor: '#000',
+        lineWidth: 2,
+        labels: {
+            style: {
+                fontSize: '10px',
+                fontFamily: 'Calibri, Verdana',
+            },
+        },
     },
     yAxis: {
-        min: 0,
         title: {
             text: ''
+        },
+        labels: {
+            formatter: function () {
+                if (this.value > 500) return Highcharts.numberFormat(this.value / 1000, 1) + "k";
+                return Highcharts.numberFormat(this.value, 0);
+            },
+            style: {
+                fontSize: '10px',
+                fontFamily: 'Calibri, Verdana',
+            }
         }
     },
     tooltip: {
         headerFormat: '<span style="font-size:10px">{point.key}</span><table>',
         pointFormat: '<tr><td style="color:{series.color};padding:0">{series.name}: </td>' +
-            '<td style="padding:0"><b>{point.y:.1f} €</b></td></tr>',
+            '<td style="padding:0"><b>{point.y:,.1f}€</b></td></tr>',
         footerFormat: '</table>',
         shared: true,
         useHTML: true
@@ -37,7 +56,7 @@ Highcharts.chart('container', {
         {% for i in data %}
         {
             name: '{{ i.name|safe }}',
-            data: {{ i.data | safe }}
+            data: {{ i.data | safe }},
         },
         {% endfor %}
     ]
