--- a/project/bookkeeping/templates/bookkeeping/includes/summary_expenses_table.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/summary_expenses_table.html
@@ -1,4 +1,5 @@
 {% load table_cell %}
+{% load template_filters %}
 {% load i18n %}
 
 <table class="table table-striped table-hover stats">
@@ -8,6 +9,7 @@
             {% for year in categories %}
             <th class="text-end">{{ year|title }}</th>
             {% endfor %}
+            <th class="text-end">{% translate 'Total' %}</th>
         </tr>
     </thead>
     <tbody>
@@ -17,7 +19,17 @@
             {% for i in row.data %}
             {% cell i %}
             {% endfor %}
+            {% cell total_col|get_item:row.name%}
         </tr>
         {% endfor %}
     </tbody>
+    <tfoot>
+        <tr>
+            <th class="text-start">{% translate 'Total' %}</th>
+            {% for x in total_row %}
+            {% cell x tag='th' %}
+            {% endfor %}
+            <th>{{ total|floatformat:2 }}</th>
+        </tr>
+    </tfoot>
 </table>
