table responsive and columns

--- a/project/bookkeeping/templates/bookkeeping/summary_expenses.html
+++ b/project/bookkeeping/templates/bookkeeping/summary_expenses.html
@@ -30,12 +30,12 @@
 <div class="row">
     <div id="search_form_data" class="col-2 gy-2">{{ form }}</div>
 
-    <div class="col">
+    <div class="col-10">
         <div class="row">
-            <div class="col" id="chart"></div>
+            <div class="col-12" id="chart"></div>
         </div>
         <div class="row mt-5">
-            <div class="col" id="table"></div>
+            <div class="col-12 table-responsive" id="table"></div>
         </div>
     </div>
 
