--- a/project/books/templates/books/index.html
+++ b/project/books/templates/books/index.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
-{% load static %}{% load i18n %}
+{% load static %}
+{% load i18n %}
 
 {% block head %}
 <script src="https://code.highcharts.com/highcharts.src.js"></script>
